--- a/style.css
+++ b/style.css
@@ -89,6 +89,20 @@ h3 {
     color: blue;
 }
 
+.download {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    resize: none;
+}
+
+
+
 .hero_box {
     max-width: 500px;
     justify-self: center;
@@ -251,3 +265,5 @@ body{
     float: right;
     margin-right: 20px;
 }
+
+
